A comma in a String is a &&, a comma between arguments is a ||.

=== New Features
* Support for boolean tag logic in Before and After hooks just like in Ruby Cucumber. (Aslak Hellesøy)
* Added Before and After hooks to Clojure. (Stu Halloway and Aslak Hellesøy)
* Simplified the WebDriverFacade in the Java WebDriver example. (Aslak Hellesøy)

=== Bugfixes
* @Before("@scenario") does not work as expected (#38 Aslak Hellesøy)
* Fixed a regression from 0.1.8 where transforming Table to Object failed (now skipping transform if type is ok). (Aslak Hellesøy)

=== Changed Features
* Groovy Before and After hooks take varargs instead of an array of String. Tag logic like Ruby Cucumber. (Aslak Hellesøy
* Ioke jars are removed from Git. We're using the jars in the Maven repo instead. (Aslak Hellesøy)

== 0.1.8 2009-11-03

Several exciting news in this release - transforms, calling of steps from step definitions
and WebDriver examples.

IMPORTANT: You should upgrade to JRuby 1.4.0 and Cucumber 0.4.3.

=== New Features
* Two new examples using WebDriver (with Groovy or Java) have been added. (Aslak Hellesøy)
* Ability to call steps from step definitions in Scala. (Jon-Anders Teigen)
* Ability to call steps from step definitions in Guice. (Henning Jensen)
* A new @Transform is used to annotate methods that converts a string to specific type. 
  See examples/java/features/transform.feature an example of how it's done (Torbjørn Vatn)

=== Bugfixes
* Made programming language dependencies optional (Aslak Hellesøy)

== 0.1.7 2009-10-15

This is an exciting new release with several great new features. (You must upgrade to cucumber 0.4.2).

You can now call other steps by String:

  @When("^I call another step$")
  public void iCallAnotherStep() {
      Given("it is magic");
  }

This is currently only supported if you use PicoContainer or Spring (but not yet Guice - see below).